--- a/INDEX1.HTML
+++ b/INDEX1.HTML
@@ -6,90 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet' crossorigin='anonymous'>
-    <title>portfolio</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1em;
-            text-align: center;
-        }
-
-        section {
-            padding: 2em;
-        }
-
-        h1,
-        h2,
-        h3,
-        p {
-            margin: 0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .profile {
-            text-align: center;
-        }
-
-        .skills {
-            text-align: center;
-        }
-
-        .projects {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-        }
-
-        .project {
-            flex: 1 1 300px;
-            border: 1px solid #ddd;
-            padding: 1em;
-            border-radius: 5px;
-            margin: 5px;
-            text-align: center;
-        }
-
-        .accomplishments {
-            text-align: center;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 1em;
-            text-align: center;
-        }
-    </style>
+    <title>Portfolio - Macha Sivakumar</title>
 </head>
 
 <body>
 
     <header>
-        <h1>MACHA SIVAKUMAR</h1>
-        <p>Web Developer</p>
+        <div class="header-content">
+            <h1>Macha Sivakumar</h1>
+            <p>Web Developer</p>
+        </div>
+        <div class="profile-photo">
+            <!-- Add your photo here if needed -->
+        </div>
     </header>
 
     <section class="profile container">
-        <h2>ABOUT</h2>
+        <h2>About</h2>
         <p>Experienced web developer with a passion for creating responsive and user-friendly websites.</p>
     </section>
 
     <section class="skills container">
         <h2>Skills</h2>
-        <p>HTML5, CSS3, JavaScript, UI/UX Design</p>
+        <p>HTML5, CSS3, JavaScript, UI/UX Design ,python ,Machine Learning</p>
     </section>
 
     <section class="projects container">
@@ -99,9 +38,8 @@
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>Creating home page of netflix with html,css, java script.</p>
+            <p>Creating home page of Netflix with HTML, CSS, JavaScript.</p>
         </div>
-        <!-- Add more projects as needed -->
     </section>
 
     <section class="accomplishments container">
@@ -117,7 +55,7 @@
     </section>
 
     <footer>
-        <p>&#169; MACHA SIVAKUMAR. All rights reserved.</p>
+        <p>&#169; Macha Sivakumar. All rights reserved.</p>
     </footer>
 
 </body>
